--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,87 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
+@article{taufik2019quantitative,
+  abbr={IPAConvex},
+  title={Quantitative Interpretation: A Novel Approach using Spectral Trend Attribute Analysis and Iterative Wiener Filter in Characterizing Carbonate Reservoir on West Java Basin},
+  author={Taufik, MH and Utami, AP and Wichaksana, BA and Nuraeni, F and Reza, M},
+  year={2019},
+  html={https://archives.datapages.com/data/ipa_pdf/2019/IPA19-SG-397.htm},
   bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,},
-  preview={brownian-motion.gif}
+  publisher={Indonesian Petroleum Association}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
-}
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
-}
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
+@article{taufik2020integrated,
+  abbr={Thesis},
+  title={Integrated Prediction Error Filter Analysis Application On Lake Towuti},
+  author={Taufik, MH and Winardhi, IS and Bijaksana, S},
+  journal={Jurnal Geofisika},
   volume={17},
-  pages={549--560},
-  year={1905}
-}
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
-
-@book{przibram1967letters,
+  number={2},
+  pages={16--21},
+  html={https://jurnal-geofisika.or.id/index.php/jurnal-geofisika/article/view/415},
   bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+  year={2020}
 }
+
+@inproceedings{taufik2021eikonala,
+  abbr={EAGEMeeting},
+  title={The Eikonal solution for attenuating VTI media using physics-informed neural networks},
+  author={Taufik, MH and Waheed, UB and Hao, Q and Alkhalifah, T},
+  booktitle={82nd EAGE Annual Conference \& Exhibition},
+  volume={2021},
+  number={1},
+  pages={1--5},
+  year={2021},
+  html={https://www.earthdoc.org/content/papers/10.3997/2214-4609.202112917},
+  bibtex_show={true},
+  organization={EAGE Publications BV}
+}
+
+@inproceedings{taufik2021eikonalb,
+  abbr={AGUMeeting},
+  title={Eikonal Solution Using Physics-Informed Neural Networks for Global Seismic Travel Time Prediction},
+  author={Taufik, MH and Waheed, UB and Alkhalifah, T},
+  booktitle={AGU Fall Meeting Abstracts},
+  volume={2021},
+  pages={S34A--01},
+  html={https://ui.adsabs.harvard.edu/abs/2021AGUFM.S34A..01T/abstract},
+  bibtex_show={true},
+  year={2021}
+}
+
+@phdthesis{taufik2021eikonal,
+  abbr={Thesis},
+  title={Eikonal Solution Using Physics-Informed Neural Networks for Global Seismic Travel Time Modelling},
+  author={Taufik, MH},
+  html={https://repository.kaust.edu.sa/handle/10754/673952},
+  bibtex_show={true},
+  year={2021}
+}
+
+@inproceedings{taufik2022upwind,
+  abbr={EAGEMeeting},
+  title={Upwind, No More: Flexible Traveltime Solutions Using Physics-Informed Neural Networks},
+  author={Taufik, MH and Waheed, UB and Alkhalifah, T},
+  booktitle={83rd EAGE Annual Conference \& Exhibition},
+  volume={2022},
+  number={1},
+  pages={1--5},
+  year={2022},
+  html={https://ieeexplore.ieee.org/abstract/document/9933886/},
+  bibtex_show={true},
+  organization={European Association of Geoscientists \& Engineers}
+}
+
+@inproceedings{taufik2022neural,
+  abbr={SSAMeeting},
+  title={A Neural Network Travel Time Function for Direct Travel Time Tomography},
+  author={Taufik, MH and Alkhalifah, T},
+  booktitle={Seismic Tomography: What Comes Next?},
+  volume={2022},
+  number={1},
+  year={2022},
+  bibtex_show={true},
+  organization={Seismological Society of America}
+}
+
